Pagination Visuals and CampgroundType Additions Improved pagination text on main page by bolding and changing font color to higher contrast. Noticed missing campgroundTypes, so I added those to the filtering menu on the main page. Added missing campgroundTypes to the viewCamp page. Issue #42

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -122,7 +122,8 @@ input.searchText{
 
 .pagination {
   margin-top: 20px;
-  color: #666
+  color: #ffffff;
+  font-weight: bold;
 }
 
 .pagination button {
@@ -186,7 +187,7 @@ input.searchText{
   border: 1px solid #ccc;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   z-index: 10;
-  width: 250px;
+  width: 350px;
   max-height: 300px;
   overflow-y: auto;
   margin-top: 4px;
